--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "LIRI-node-app",
   "version": "1.0.0",
   "description": "",
-  "main": "key.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,10 @@
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "moment": "^2.24.0",
-    "node-spotify-api": "^1.0.7"
+    "node": "^11.8.0",
+    "node-spotify-api": "^1.0.7",
+    "omdb": "^0.8.0",
+    "request": "^2.88.0",
+    "spotify-api": "0.0.0"
   }
 }
